# randomFigure

./: CMakeLists.txt  Circle.cpp  Circle.h  DisplayRandomFigure.ui  FigureParams.h  README.md  RandomFigureController.cpp  RandomFigureController.h  Rectangle.cpp  Rectangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp  readme.txt
